--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ button {
     border: 1px solid white;
     border-radius: 10px;
     padding: 10px;
+    margin-bottom: 10px;
     display: grid;
     grid-template-columns: 120px 150px;
     grid-template-rows: 40px 40px 20px 30px;
@@ -24,10 +25,18 @@ button {
     border-radius: 10px;
     padding: 5px;
     grid-area: i;
-    width: 80px;
+    width: 85px;
+    margin-right: 10px;
 }
 .small {
+    border-radius: 7px;
     width: 30px;
+}
+.tiny {
+    border-radius: 5px;
+    width: 20px;
+    margin-left: 7px;
+    margin-right: 7px;
 }
 .statbutton {
     background: #888;
@@ -135,6 +144,7 @@ input[type="range"]::-webkit-slider-thumb {
     background: #555;
     border: 1px solid white;
     border-radius: 10px;
+    margin-bottom: 10px;
     padding: 5px;
     height: 90px;
 }
