--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@ html {
     background: #111;
     color: white;
 }
+.core {
+    background: #888;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+}
+.core::placeholder {
+    color: white;
+}
 button {
     cursor: pointer;
 }
@@ -12,13 +22,13 @@ button {
     padding: 10px;
     margin-bottom: 10px;
     display: grid;
-    grid-template-columns: 120px 150px;
+    grid-template-columns: 120px 150px 100px;
     grid-template-rows: 40px 40px 20px 30px;
     grid-template-areas:
-        "i b s"
-        "i c s"
-        "i . s"
-        "p n s";
+        "i b b s"
+        "i c c s"
+        "i . . s"
+        "p n q r";
 }
 .pupimg {
     border: 1px solid white;
@@ -39,34 +49,34 @@ button {
     margin-right: 7px;
 }
 .statbutton {
-    background: #888;
-    border: 1px solid white;
-    border-radius: 10px;
-    padding: 5px;
-    color: white;
     grid-area: b;
 }
 .rollbutton {
-    background: #888;
-    border: 1px solid white;
-    border-radius: 10px;
-    padding: 5px;
-    color: white;
     grid-area: c;
 }
 .picker {
     grid-area: p;
 }
 .pupname {
+    grid-area: n;
+}
+.pronouns {
     background: #888;
     border: 1px solid white;
     border-radius: 10px;
     padding: 2px;
     color: white;
-    grid-area: n;
+    grid-area: q;
 }
-.pupname::placeholder {
-    color: white;
+.customprns {
+    margin-top: 5px;
+    margin-left: 20px;
+    transition: 0.5s;
+    z-index: 2;
+    grid-area: r;
+}
+.customprn {
+    width: 50px;
 }
 .pupstats {
     padding: 0px;
